{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 208,
  "lineage": "2edbbb05-4963-0369-af43-615136e3271c",
  "resources": [
    {
      "module": "module.RDS-Module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:015058543222:instance/i-018ea54860f752623",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018ea54860f752623",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "matelliocorp_bastion_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c9dee424b3ae372",
            "private_dns": "ip-10-0-2-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.201",
            "public_dns": "ec2-54-84-161-241.compute-1.amazonaws.com",
            "public_ip": "54.84.161.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d108ed6ecd96d0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feff34df6f70bd0f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbf2c89b1240a526"
            ]
          },
          "dependencies": [
            "module.RDS-Module.aws_key_pair.bastion_pair",
            "module.RDS-Module.module.VPC-Module.aws_security_group.bastion_sg",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available",
            "module.RDS-Module.tls_private_key.my_bastion_key"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "eb_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015058543222:loadbalancer/app/matelliocorp-load-balancer/d4c7a8eabb4b2ba0",
            "arn_suffix": "app/matelliocorp-load-balancer/d4c7a8eabb4b2ba0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "matelliocorp-load-balancer-279015513.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:015058543222:loadbalancer/app/matelliocorp-load-balancer/d4c7a8eabb4b2ba0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "matelliocorp-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06e0727ea68e1fd42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02cb3db77117aa1b3"
              },
              {
                "subnet_id": "subnet-0feff34df6f70bd0f"
              }
            ],
            "subnets": [
              "subnet-02cb3db77117aa1b3",
              "subnet-0feff34df6f70bd0f"
            ],
            "tags": {
              "Name": "matelliocorp-eb_lb"
            },
            "tags_all": {
              "Name": "matelliocorp-eb_lb"
            },
            "vpc_id": "vpc-022ef8423fbf7b654",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_security_group.alb_sg",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:015058543222:listener/app/matelliocorp-load-balancer/d4c7a8eabb4b2ba0/d82e7b2220620b20",
            "certificate_arn": "arn:aws:iam::015058543222:server-certificate/my-self-signed-cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:015058543222:listener/app/matelliocorp-load-balancer/d4c7a8eabb4b2ba0/d82e7b2220620b20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:015058543222:loadbalancer/app/matelliocorp-load-balancer/d4c7a8eabb4b2ba0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.aws_iam_server_certificate.self_signed_cert",
            "module.RDS-Module.aws_lb.eb_lb",
            "module.RDS-Module.module.VPC-Module.aws_security_group.alb_sg",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available",
            "module.RDS-Module.tls_private_key.my_private_key",
            "module.RDS-Module.tls_self_signed_cert.self_signed_cert"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4122e277eb439b2",
            "association_id": "eipassoc-098e7f7771b73626c",
            "domain": "vpc",
            "id": "eipalloc-0c4122e277eb439b2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c9b5a4af7199504",
            "private_dns": "ip-10-0-2-127.ec2.internal",
            "private_ip": "10.0.2.127",
            "public_dns": "ec2-35-168-143-223.compute-1.amazonaws.com",
            "public_ip": "35.168.143.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "matelliocorp-eip-us-east-1a"
            },
            "tags_all": {
              "Name": "matelliocorp-eip-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d073858cbb5362e",
            "association_id": "eipassoc-0633625bcce802f27",
            "domain": "vpc",
            "id": "eipalloc-00d073858cbb5362e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05342d79484061e0e",
            "private_dns": "ip-10-0-3-245.ec2.internal",
            "private_ip": "10.0.3.245",
            "public_dns": "ec2-35-153-174-78.compute-1.amazonaws.com",
            "public_ip": "35.153.174.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "matelliocorp-eip-us-east-1b"
            },
            "tags_all": {
              "Name": "matelliocorp-eip-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:internet-gateway/igw-013eac71570497f1a",
            "id": "igw-013eac71570497f1a",
            "owner_id": "015058543222",
            "tags": {
              "Name": "matelliocorp-igw"
            },
            "tags_all": {
              "Name": "matelliocorp-igw"
            },
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4122e277eb439b2",
            "association_id": "eipassoc-098e7f7771b73626c",
            "connectivity_type": "public",
            "id": "nat-052e1abdf50a42c23",
            "network_interface_id": "eni-05c9b5a4af7199504",
            "private_ip": "10.0.2.127",
            "public_ip": "35.168.143.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0feff34df6f70bd0f",
            "tags": {
              "Name": "matelliocorp-nat-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "matelliocorp-nat-public1-us-east-1a"
            }
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_eip.nat_eip",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d073858cbb5362e",
            "association_id": "eipassoc-0633625bcce802f27",
            "connectivity_type": "public",
            "id": "nat-0be7aac67e2641b92",
            "network_interface_id": "eni-05342d79484061e0e",
            "private_ip": "10.0.3.245",
            "public_ip": "35.153.174.78",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02cb3db77117aa1b3",
            "tags": {
              "Name": "matelliocorp-nat-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "matelliocorp-nat-public2-us-east-1b"
            }
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_eip.nat_eip",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:route-table/rtb-0649963f37bdd5770",
            "id": "rtb-0649963f37bdd5770",
            "owner_id": "015058543222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052e1abdf50a42c23",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "matelliocorp-nat-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "matelliocorp-nat-public1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_eip.nat_eip",
            "module.RDS-Module.module.VPC-Module.aws_nat_gateway.nat-public",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:route-table/rtb-06c981933f22c76a6",
            "id": "rtb-06c981933f22c76a6",
            "owner_id": "015058543222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be7aac67e2641b92",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "matelliocorp-nat-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "matelliocorp-nat-public2-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_eip.nat_eip",
            "module.RDS-Module.module.VPC-Module.aws_nat_gateway.nat-public",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:route-table/rtb-057e414ea9ae938d8",
            "id": "rtb-057e414ea9ae938d8",
            "owner_id": "015058543222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013eac71570497f1a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "matelliocorp-rtb-public"
            },
            "tags_all": {
              "Name": "matelliocorp-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_internet_gateway.igw",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04904c5fb42e4802b",
            "route_table_id": "rtb-0649963f37bdd5770",
            "subnet_id": "subnet-034a870028bfed336"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_eip.nat_eip",
            "module.RDS-Module.module.VPC-Module.aws_nat_gateway.nat-public",
            "module.RDS-Module.module.VPC-Module.aws_route_table.private_rtb",
            "module.RDS-Module.module.VPC-Module.aws_subnet.private",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e6e45a1d28d29de",
            "route_table_id": "rtb-06c981933f22c76a6",
            "subnet_id": "subnet-0659adc40eb19db4b"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_eip.nat_eip",
            "module.RDS-Module.module.VPC-Module.aws_nat_gateway.nat-public",
            "module.RDS-Module.module.VPC-Module.aws_route_table.private_rtb",
            "module.RDS-Module.module.VPC-Module.aws_subnet.private",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087c2768e035b727b",
            "route_table_id": "rtb-057e414ea9ae938d8",
            "subnet_id": "subnet-0feff34df6f70bd0f"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_internet_gateway.igw",
            "module.RDS-Module.module.VPC-Module.aws_route_table.rtb-public",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e05afd8fbf98d0",
            "route_table_id": "rtb-057e414ea9ae938d8",
            "subnet_id": "subnet-02cb3db77117aa1b3"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_internet_gateway.igw",
            "module.RDS-Module.module.VPC-Module.aws_route_table.rtb-public",
            "module.RDS-Module.module.VPC-Module.aws_subnet.public",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:security-group/sg-06e0727ea68e1fd42",
            "description": "Allow HTTP, HTTPS and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e0727ea68e1fd42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "matelliocorp-alb-sg",
            "name_prefix": "",
            "owner_id": "015058543222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "matelliocorp-alb-sg"
            },
            "tags_all": {
              "Name": "matelliocorp-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:security-group/sg-0dbf2c89b1240a526",
            "description": "Allow only SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbf2c89b1240a526",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "matelliocorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "015058543222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "matelliocorp-bastion-sg"
            },
            "tags_all": {
              "Name": "matelliocorp-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_beanstalk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:security-group/sg-0e87ff0a26c5fd8dd",
            "description": "Security group for Elastic Beanstalk",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e87ff0a26c5fd8dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "matelliocorp-elastic_beanstalk_sg",
            "name_prefix": "",
            "owner_id": "015058543222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "matelliocorp-elastic_beanstalk_sg"
            },
            "tags_all": {
              "Name": "matelliocorp-elastic_beanstalk_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:security-group/sg-019f16e34172d29de",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019f16e34172d29de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e87ff0a26c5fd8dd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "matelliocorp-sg",
            "name_prefix": "",
            "owner_id": "015058543222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "matelliocorp-rds_sg"
            },
            "tags_all": {
              "Name": "matelliocorp-rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_security_group.elastic_beanstalk_sg",
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:subnet/subnet-034a870028bfed336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034a870028bfed336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015058543222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matelliocorp-Private_Subnet_1"
            },
            "tags_all": {
              "Name": "matelliocorp-Private_Subnet_1"
            },
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:subnet/subnet-0659adc40eb19db4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0659adc40eb19db4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015058543222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matelliocorp-Private_Subnet_2"
            },
            "tags_all": {
              "Name": "matelliocorp-Private_Subnet_2"
            },
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:subnet/subnet-0feff34df6f70bd0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0feff34df6f70bd0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015058543222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matelliocorp-Public_Subnet_1"
            },
            "tags_all": {
              "Name": "matelliocorp-Public_Subnet_1"
            },
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:subnet/subnet-02cb3db77117aa1b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cb3db77117aa1b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015058543222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matelliocorp-Public_Subnet_2"
            },
            "tags_all": {
              "Name": "matelliocorp-Public_Subnet_2"
            },
            "vpc_id": "vpc-022ef8423fbf7b654"
          },
          "dependencies": [
            "module.RDS-Module.module.VPC-Module.aws_vpc.vpc",
            "module.RDS-Module.module.VPC-Module.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.RDS-Module.module.VPC-Module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015058543222:vpc/vpc-022ef8423fbf7b654",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0579d139ccdca7a6a",
            "default_route_table_id": "rtb-006812b85158fe6ec",
            "default_security_group_id": "sg-00aa2aa000243d5c4",
            "dhcp_options_id": "dopt-0d0ea3a85b706eedb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022ef8423fbf7b654",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006812b85158fe6ec",
            "owner_id": "015058543222",
            "tags": {
              "Name": "matelliocorp-vpc"
            },
            "tags_all": {
              "Name": "matelliocorp-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}